scripts/install/kubernetes/istio-sidecar-injector-with-ca-bundle.yaml
# GENERATED FILE. Use with Kubernetes 1.9+
# TO UPDATE, modify files in install/kubernetes/templates and run install/updateVersion.sh
apiVersion: v1
kind: Service
metadata:
  name: istio-sidecar-injector
  namespace: istio-system
  labels:
    istio: sidecar-injector
spec:
  ports:
  - name: https-webhook # optional
    port: 443
  selector:
    istio: sidecar-injector
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: istio-sidecar-injector
  namespace: istio-system
  labels:
    istio: sidecar-injector
spec:
  replicas: 1
  template:
    metadata:
      name: istio-sidecar-injector
      labels:
        istio: sidecar-injector
    spec:
      serviceAccountName: istio-sidecar-injector-service-account
      containers:
        - name: webhook
          image: docker.io/istio/sidecar_injector:0.5.0
          imagePullPolicy: IfNotPresent
          args:
            - --tlsCertFile=/etc/istio/certs/cert.pem
            - --tlsKeyFile=/etc/istio/certs/key.pem
            - --injectConfig=/etc/istio/inject/config
            - --meshConfig=/etc/istio/config/mesh
          volumeMounts:
          - name: config-volume
            mountPath: /etc/istio/config
            readOnly: true
          - name: certs
            mountPath: /etc/istio/certs
            readOnly: true
          - name: inject-config
            mountPath: /etc/istio/inject
            readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: istio
      - name: certs
        secret:
          secretName: sidecar-injector-certs
      - name: inject-config
        configMap:
          name: istio-inject
          items:
          - key: config
            path: config
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istio-sidecar-injector
        namespace: istio-system
        path: "/inject"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFMk1UQXlOVEUzTXpZMU1Gb1hEVEkyTVRBeU16RTNNelkxTUZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWxICjlES1NQeVBLSUhqbnlWUTcwRFRQbWpkeFNDd1NnTlY2NlNTNnRLYVBiaTFNOGt6d0N2MGV3a3orREF5c29iKzAKYVE0ZlNwQ3ZIMENqTDMvMWhTWHhVVU9WWjlUMExlWTFncnBleTJiamhObXdkdlRvMnUyM1ZxMVB6cWNSQk1JOApmdDZCaW0xbDlV [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        istio-injection: enabled
---
